--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Main-Class>xyz.pubudu.strop.HttpScraper</Main-Class>
+                                        <Main-Class>xyz.pubudu.scraper.stockquotescraper.StockQuoteScraper</Main-Class>
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
